# toolchain-tools

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: bolt-macos.yml  clang-linux.yml  clang-macos.yml  rust-crate.yml  zizmor.yml
apple-sdk/src/: lib.rs
binary-portability/: Cargo.toml  README.rd
binary-portability/src/: elf.rs  lib.rs  linux_standard_base.rs
glibc-abi-tool/: Cargo.toml
glibc-abi-tool/src/: abilist.rs  lib.rs  main.rs  repo.rs  report.rs
glibc-abi-tool/templates/: common.css  glibc-arch.html  header.html  index.html  script.js
llvm-command-parser/: Cargo.toml  README.md
llvm-command-parser/src/: lib.rs
llvm-command-tablegen-json/: Cargo.toml  README.md  update-llvm-tablegen.py
llvm-command-tablegen-json/src/: lib.rs
llvm-command-tablegen-json/src/llvm-13/: clang.json  dsymutil.json  lld-coff.json  lld-darwin-ld.json  lld-elf.json  lld-macho.json  lld-mingw.json  lld-wasm.json  llvm-cvtres.json  llvm-cxxfilt.json  llvm-dlltool.json  llvm-lib.json  llvm-ml.json  llvm-mt.json  llvm-nm.json  llvm-rc.json  llvm-readobj.json  llvm-size.json  llvm-strings.json  llvm-symbolizer.json
llvm-option-parser/: Cargo.toml  README.md
llvm-option-parser/src/: lib.rs
text-stub-library/: Cargo.toml  README.md
text-stub-library/src/: lib.rs  yaml.rs
toolchain-bootstrap/: .arg.example  .env.example  .secret.example  Dockerfile  Earthfile  Justfile  README.md  secrets.example
toolchain-bootstrap/patches/: bolt-computed-gotos.patch  tail-duplicator-computed-gotos.patch
toolchain-bootstrap/scripts/: binutils-build.sh  bolt-macos.sh  bolt.sh  clang-bootstrap.sh  clang-gnu-stage2.sh  clang-macos.py  clang-macos.sh  cpython-build.sh  gcc-build-linux.sh  gcc-build-x86-64-linux.sh  install-sccache.sh  llvm-assemble-toolchain.sh  openssl-build.sh  secure-download.sh  zstd-build.sh
toolchain-bootstrap/support/: requirements.clang-macos.txt
