[package]
name = "binary-portability"
version = "0.1.0-pre"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
description = "Inspect object files for machine portability"
keywords = ["apple"]
homepage = "https://github.com/indygreg/toolchain-tools"
repository = "https://github.com/indygreg/toolchain-tools.git"

[dependencies]
object = "0.38.0"
thiserror = "2.0.17"
