[package]
name = "glibc-abi-tool"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/indygreg/toolchain-tools"
repository = "https://github.com/indygreg/toolchain-tools.git"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
description = "Support targeting different libc versions"

[dependencies]
anyhow = "1.0.102"
askama = "0.15.6"
clap = { version = "4.6.1", features = ["derive"] }
gix = { version = "0.81.0", default-features = false, features = ["parallel", "sha1"] }
gix-ref = { version = "0.61.0", features = ["sha1"] }
rayon = "1.12.0"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
