[package]
name = "llvm-option-parser"
version = "0.1.0-pre"
edition = "2021"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
description = "Generic LLVM command option parser based on tablegen data"
readme = "README.md"
keywords = ["clang", "llvm", "tablegen"]
homepage = "https://github.com/indygreg/toolchain-tools"
repository = "https://github.com/indygreg/toolchain-tools.git"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.69"
