[package]
name = "text-stub-library"
version = "0.9.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Interface to text stub files (.tbd files)"
keywords = ["apple", "macos", "tbd"]
homepage = "https://github.com/indygreg/toolchain-tools"
repository = "https://github.com/indygreg/toolchain-tools.git"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
yaml-rust = "0.4"
serde_yaml = "0.8"

[dev-dependencies]
rand = "0.8"
rayon = "1.5"
walkdir = "2.3"

[dev-dependencies.apple-sdk]
path = "../apple-sdk"
default-features = false
