[package]
name = "text-stub-library"
version = "0.9.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Interface to text stub files (.tbd files)"
keywords = ["apple", "macos", "tbd"]
homepage = "https://github.com/indygreg/toolchain-tools"
repository = "https://github.com/indygreg/toolchain-tools.git"
readme = "README.md"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
yaml-rust = "0.4.5"
serde_yaml = "0.9.34"

[dev-dependencies]
apple-sdk = { version = "0.6.0", default-features = false }
rand = "0.9.0"
rayon = "1.10.0"
walkdir = "2.5.0"
